<resources>
    <string name="app_name">Halodoc</string>

    <string name="name">Your name</string>
    <string name="name_doctor">Dr. Agus hendra Rao Timoro Susilo</string>
    <string name="job">Doctor Umum</string>
    <string name="price">Rp. 30.000</string>
    <string name="rating">100%</string>
    <string name="suka">Suka</string>
    <string name="pengetahuan">Pengetahuan</string>
    <string name="experience">3 Tahun</string>
    <string name="chat">CHAT</string>
    <string name="user">Abdul Aziz</string>
    <string name="fix_addres">Jalan Raya Bogor Jawa Barat</string>
    <string name="my_address">Alamat</string>
    <string name="my_name">Halo,</string>
    <string name="address">Your address</string>
    <string name="buatjanji">Buat Janji RS</string>
    <string name="bebas">Bebas antre di RS</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="doctor">Chat dengan dokter</string>
    <string name="kami">Kami disini untuk kamu!</string>
    <string name="lihat">Lihat semua</string>
    <string name="offers">Penawaran Menarik</string>
    <string name="know">Product Kami</string>
    <string name="titles">Kondisi yang membutuhkan Kateteriasasi Otak</string>
    <string name="send_otp">Send OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="received_message">Received Message</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="message_login">Kamu bisa daftar dengan menggunakan akun Gmail agar lebih aman dan mudah.</string>
    <string name="google">Google</string>
    <string name="konfirmasi">Kami Telah Mengirim Detail Pesanan dan Pembayaran ke Email Anda</string>
    <string name="client_google">251236537679-caggb32kvanac30on3mif8o3i4bivvaf.apps.googleusercontent.com</string>
</resources>