<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/click"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image"
                    android:src="@drawable/docotrel1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:text="@string/name_doctor"
                        android:textSize="19dp"
                        android:textStyle="bold"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/job"
                        android:text="@string/job"
                        android:textSize="17dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/price"
                        android:text="@string/price"
                        android:textSize="17dp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/brown2"/>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="90"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="25"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_like"
                        android:tint="@color/brown2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>

                    <TextView
                        android:id="@+id/rating"
                        android:text="@string/rating"
                        android:textSize="17dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="35"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_job"
                        android:tint="@color/brown2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>

                    <TextView
                        android:id="@+id/experience"
                        android:text="@string/experience"
                        android:textSize="17dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="30"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/chat"
                        android:text="@string/chat"
                        android:textColor="@color/white"
                        android:background="@drawable/customize2"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>