<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/abl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:theme="@style/AppTheme.AppBarOverlay">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="80"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/my_name"
                            android:textColor="@color/black"
                            android:paddingStart="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/email"
                            android:text="Apa kabar hari ini?"
                            android:textSize="18dp"
                            android:paddingStart="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:gravity="center_vertical"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_cart"
                        android:orientation="vertical"
                        android:layout_weight="20"
                        android:layout_width="0dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/count"
                            android:text="10"
                            android:visibility="gone"
                            android:textColor="@color/red"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:src="@drawable/ic_cart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/offers"
                                android:textSize="19dp"
                                android:textColor="@color/black"
                                android:layout_weight="60"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"/>

                        </LinearLayout>

                        <com.smarteist.autoimageslider.SliderView
                            android:id="@+id/imageSlider"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:sliderAnimationDuration="400"
                            app:sliderAutoCycleDirection="back_and_forth"
                            app:sliderAutoCycleEnabled="true"
                            app:sliderIndicatorAnimationDuration="400"
                            app:sliderIndicatorGravity="center_horizontal|bottom"
                            app:sliderIndicatorMargin="15dp"
                            app:sliderIndicatorOrientation="horizontal"
                            app:sliderIndicatorPadding="3dp"
                            app:sliderIndicatorRadius="2dp"
                            app:sliderIndicatorSelectedColor="#5A5A5A"
                            app:sliderIndicatorUnselectedColor="#FFF"
                            app:sliderScrollTimeInSec="1"
                            app:sliderStartAutoCycle="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/ll_tv"
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/doctor"
                                android:textSize="19dp"
                                android:textColor="@color/black"
                                android:layout_weight="60"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"/>

                            <TextView
                                android:id="@+id/doctor"
                                android:text="@string/lihat"
                                android:textSize="19dp"
                                android:textColor="@color/red"
                                android:gravity="right"
                                android:layout_weight="40"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"/>

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_doctor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                        <LinearLayout
                            android:id="@+id/ll_login"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:gravity="center_horizontal"
                                android:textSize="20dp"
                                android:textColor="@color/black"
                                android:text="Login to See More Doctor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                            <Button
                                android:id="@+id/btn_login"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/customize_button"
                                android:textColor="@color/white"
                                android:text="LOGIN NOW"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/kami"
                                android:textSize="19dp"
                                android:textColor="@color/black"
                                android:layout_weight="60"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"/>

                            <TextView
                                android:id="@+id/lihat_semua"
                                android:text="@string/lihat"
                                android:textSize="19dp"
                                android:textColor="@color/red"
                                android:gravity="right"
                                android:layout_weight="40"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"/>

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:weightSum="100"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/know"
                                android:textSize="19dp"
                                android:textColor="@color/black"
                                android:layout_weight="60"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"/>

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>